# pytest-api-coverage

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  pr-title.yml  publish.yml  version-bump.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-config-and-activation/: 01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  deferred-items.md
.planning/phases/02-orchestration-and-file-output/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  deferred-items.md
docs/: api-reference.md  architecture.md  configuration.md  installation.md  reports.md  troubleshooting.md  usage.md
src/pytest_api_coverage/: __init__.py  collector.py  models.py  orchestrator.py  plugin.py  reporter.py  terminal.py  utils.py
src/pytest_api_coverage/adapters/: __init__.py  base.py  httpx_adapter.py  requests_adapter.py
src/pytest_api_coverage/config/: __init__.py  multi_spec.py  settings.py
src/pytest_api_coverage/schemas/: __init__.py  swagger.py
src/pytest_api_coverage/writers/: __init__.py  csv_writer.py  html_writer.py  json_writer.py
tests/: SCENARIOS.md  conftest.py  test_adapters.py  test_collector.py  test_example.py  test_integration.py  test_models.py  test_origin_filtering.py  test_plugin_integration.py  test_reporter.py  test_settings.py  test_split_by_origin.py  test_swagger.py  test_utils.py  test_writers.py
tests/integration/: test_config_discovery.py  test_e2e_accuracy.py  test_multi_spec_output.py  test_terminal_summary.py
tests/test_data/: swagger_example.json  swagger_test.json
tests/unit/: strategies.py  test_multi_spec_loader.py  test_orchestrator.py  test_settings.py  test_spec_config.py  test_swagger_load_mixin.py  test_swagger_url_loading.py
